--- a/packages/client/template/icon.html
+++ b/packages/client/template/icon.html
@@ -22,8 +22,8 @@
         serverURL:
           import.meta.env.SERVERURL || 'https://ralinejs.comment.lithub.cc',
         emoji: [
-          '//unpkg.com/@raline/emojis@1.1.0/bilibili',
-          '//unpkg.com/@raline/emojis@1.1.0/qq',
+          '//unpkg.com/@waline/emojis@1.1.0/bilibili',
+          '//unpkg.com/@waline/emojis@1.1.0/qq',
         ],
       });
     </script>
