--- a/packages/client/template/init.html
+++ b/packages/client/template/init.html
@@ -22,11 +22,11 @@
         serverURL:
           import.meta.env.SERVERURL || 'https://ralinejs.comment.lithub.cc',
         emoji: [
-          '//unpkg.com/@raline/emojis@1.1.0/bilibili',
-          '//unpkg.com/@raline/emojis@1.1.0/qq',
+          '//unpkg.com/@waline/emojis@1.1.0/bilibili',
+          '//unpkg.com/@waline/emojis@1.1.0/qq',
         ],
         // recaptchaV3Key: '6Lfz4-shAAAAANgsYRR0datkzv6zLIaKrSqfHsiG',
-        turnstileKey: '0x4AAAAAAACTzOE6F_3MuL-L',
+        // turnstileKey: '0x4AAAAAAACTzOE6F_3MuL-L',
       });
     </script>
   </body>
