--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,12 @@
       serverURL: "{{server_url}}",
       recaptchaV3Key: '{{recaptcha_v3_key}}',
       turnstileKey: '{{turnstile_key}}',
+      emoji: [
+        '//unpkg.com/@waline/emojis@1.2.0/weibo',
+        '//unpkg.com/@waline/emojis@1.2.0/bmoji',
+        '//unpkg.com/@waline/emojis@1.2.0/qq',
+        '//unpkg.com/@waline/emojis@1.2.0/tieba'
+      ],
     });
   </script>
 </body>
